// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndicator component with buttons have to match snapshot 1`] = `
<StepIndicator
  active_item={1}
  active_url={null}
  class={null}
  className={null}
  current_step={null}
  data={
    [
      {
        "title": "Aa",
      },
      {
        "title": "Bb",
      },
      {
        "title": "Cc",
      },
    ]
  }
  hide_numbers={false}
  internalId="unique-buttons"
  mode={null}
  no_animation={null}
  on_change={null}
  on_click={null}
  on_item_render={null}
  overview_title={null}
  sidebar_id={null}
  skeleton={false}
  step_title={null}
  step_title_extended={null}
  use_navigation={true}
>
  <StepIndicatorProvider
    active_item={1}
    active_url={null}
    class={null}
    className={null}
    current_step={null}
    data={
      [
        {
          "title": "Aa",
        },
        {
          "title": "Bb",
        },
        {
          "title": "Cc",
        },
      ]
    }
    hide_numbers={false}
    internalId="unique-buttons"
    isSidebar={false}
    isV1={true}
    listAttributes={
      {
        "active_item": 1,
        "active_url": null,
        "children": null,
        "class": null,
        "className": null,
        "current_step": null,
        "data": [
          {
            "title": "Aa",
          },
          {
            "title": "Bb",
          },
          {
            "title": "Cc",
          },
        ],
        "hide_numbers": false,
        "internalId": "unique-buttons",
        "mode": null,
        "no_animation": null,
        "on_change": null,
        "on_click": null,
        "on_item_render": null,
        "overview_title": null,
        "sidebar_id": null,
        "skeleton": false,
        "step_title": null,
        "step_title_extended": null,
        "use_navigation": true,
      }
    }
    mode={null}
    no_animation={null}
    on_change={null}
    on_click={null}
    on_item_render={null}
    overview_title={null}
    sidebar_id="unique-buttons"
    skeleton={false}
    step_title={null}
    step_title_extended={null}
    use_navigation={true}
  >
    <div
      className="dnb-step-indicator-v1"
    >
      <StepIndicatorList>
        <div
          className="dnb-step-indicator"
        >
          <ol
            className="dnb-step-indicator__list"
          >
            <StepIndicatorItem
              currentItemNum={0}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="0"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Aa"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item dnb-step-indicator--visited"
              >
                <button
                  aria-describedby="unique-buttons-0"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      1. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Aa
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-0"
                >
                  Steg 1 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={1}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="1"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Bb"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                aria-current="step"
                className="dnb-step-indicator__item dnb-step-indicator--active"
              >
                <button
                  aria-describedby="unique-buttons-1"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      2. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Bb
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-1"
                >
                  Steg 2 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={2}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="2"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Cc"
              url={null}
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item"
              >
                <button
                  aria-describedby="unique-buttons-2"
                  aria-disabled={true}
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link dnb-anchor--no-style"
                  disabled={true}
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                  type="button"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      3. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Cc
                    </span>
                  </StepItemWrapper>
                </button>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-buttons-2"
                >
                  Steg 3 av 3
                </span>
              </li>
            </StepIndicatorItem>
          </ol>
        </div>
      </StepIndicatorList>
    </div>
  </StepIndicatorProvider>
</StepIndicator>
`;

exports[`StepIndicator component with urls have to match snapshot 1`] = `
<StepIndicator
  active_item={null}
  active_url="?b"
  class={null}
  className={null}
  current_step={null}
  data={
    [
      {
        "title": "Aa",
        "url": "?a",
      },
      {
        "title": "Bb",
        "url": "?b",
      },
      {
        "title": "Cc",
        "url": "?c",
        "url_future": "",
      },
    ]
  }
  hide_numbers={false}
  internalId="unique"
  mode={null}
  no_animation={null}
  on_change={null}
  on_click={null}
  on_item_render={null}
  overview_title={null}
  sidebar_id="sidebar_id"
  skeleton={false}
  step_title={null}
  step_title_extended={null}
  use_navigation={null}
>
  <StepIndicatorProvider
    active_item={null}
    active_url="?b"
    class={null}
    className={null}
    current_step={null}
    data={
      [
        {
          "title": "Aa",
          "url": "?a",
        },
        {
          "title": "Bb",
          "url": "?b",
        },
        {
          "title": "Cc",
          "url": "?c",
          "url_future": "",
        },
      ]
    }
    hide_numbers={false}
    internalId="unique"
    isSidebar={false}
    isV1={true}
    listAttributes={
      {
        "active_item": null,
        "active_url": "?b",
        "children": null,
        "class": null,
        "className": null,
        "current_step": null,
        "data": [
          {
            "title": "Aa",
            "url": "?a",
          },
          {
            "title": "Bb",
            "url": "?b",
          },
          {
            "title": "Cc",
            "url": "?c",
            "url_future": "",
          },
        ],
        "hide_numbers": false,
        "internalId": "unique",
        "mode": null,
        "no_animation": null,
        "on_change": null,
        "on_click": null,
        "on_item_render": null,
        "overview_title": null,
        "sidebar_id": "sidebar_id",
        "skeleton": false,
        "step_title": null,
        "step_title_extended": null,
        "use_navigation": null,
      }
    }
    mode={null}
    no_animation={null}
    on_change={null}
    on_click={null}
    on_item_render={null}
    overview_title={null}
    sidebar_id="unique"
    skeleton={false}
    step_title={null}
    step_title_extended={null}
    use_navigation={null}
  >
    <div
      className="dnb-step-indicator-v1"
    >
      <StepIndicatorList>
        <nav
          className="dnb-step-indicator"
        >
          <ol
            className="dnb-step-indicator__list"
          >
            <StepIndicatorItem
              currentItemNum={0}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="0"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Aa"
              url="?a"
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item dnb-step-indicator--visited"
              >
                <a
                  aria-describedby="unique-0"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  href="?a"
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      1. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Aa
                    </span>
                  </StepItemWrapper>
                </a>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-0"
                >
                  Steg 1 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={1}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="1"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Bb"
              url="?b"
              url_future={null}
              url_passed={null}
              use_navigation={null}
            >
              <li
                aria-current="step"
                className="dnb-step-indicator__item dnb-step-indicator--active"
              >
                <a
                  aria-describedby="unique-1"
                  className="dnb-anchor dnb-step-indicator__item-content dnb-step-indicator__item-content--link"
                  disabled={null}
                  href="?b"
                  onClick={[Function]}
                  status={null}
                  status_state="warn"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      2. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Bb
                    </span>
                  </StepItemWrapper>
                </a>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-1"
                >
                  Steg 2 av 3
                </span>
              </li>
            </StepIndicatorItem>
            <StepIndicatorItem
              currentItemNum={2}
              disabled={null}
              hide_numbers={false}
              inactive={null}
              is_active={null}
              is_current={null}
              key="2"
              mode={null}
              on_change={null}
              on_click={null}
              on_item_render={null}
              on_render={null}
              status={null}
              status_state="warn"
              step_title="%step"
              title="Cc"
              url="?c"
              url_future=""
              url_passed={null}
              use_navigation={null}
            >
              <li
                className="dnb-step-indicator__item"
              >
                <span
                  aria-describedby="unique-2"
                  className="dnb-step-indicator__item-content dnb-step-indicator__item-content--static"
                  role="text"
                >
                  <StepItemWrapper>
                    <span
                      className="dnb-step-indicator__item-content--number"
                    >
                      3. 
                    </span>
                    <span
                      className="dnb-step-indicator__item-content--text"
                    >
                      Cc
                    </span>
                  </StepItemWrapper>
                </span>
                <span
                  aria-hidden={true}
                  className="dnb-sr-only"
                  id="unique-2"
                >
                  Steg 3 av 3
                </span>
              </li>
            </StepIndicatorItem>
          </ol>
        </nav>
      </StepIndicatorList>
    </div>
  </StepIndicatorProvider>
</StepIndicator>
`;

exports[`StepIndicator scss have to match default theme snapshot 1`] = `
"/*
* StepIndicator theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Deprecated v1
*
*/
.dnb-step-indicator-v1 .dnb-step-indicator__item-content--static {
  color: var(--color-emerald-green); }

.dnb-step-indicator-v1 .dnb-step-indicator__item-content--link {
  color: var(--color-sea-green); }

.dnb-step-indicator-v1 .dnb-step-indicator__item {
  margin-left: 4.5rem; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item:first-child {
    margin-left: 0; }
  @media screen and (max-width: 50em) {
    .dnb-step-indicator-v1 .dnb-step-indicator__item {
      margin-left: 2rem; } }

.dnb-step-indicator-v1 .dnb-step-indicator::after {
  color: var(--color-mint-green); }

.dnb-step-indicator-v1 .dnb-step-indicator--active.dnb-step-indicator-v1 .dnb-step-indicator__item::after,
.dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content::after {
  background-color: var(--color-sea-green); }

.dnb-step-indicator-v1 .dnb-step-indicator span[hidden],
.dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content {
  font-weight: var(--font-weight-medium); }
  .dnb-step-indicator-v1 .dnb-step-indicator span[hidden]:not(:hover),
  .dnb-step-indicator-v1 .dnb-step-indicator--active .dnb-step-indicator__item-content:not(:hover) {
    color: var(--color-emerald-green); }

.dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
  font-weight: var(--font-weight-medium);
  --border-color: var(--color-sea-green);
  box-shadow: inset 0 0 0 0.125rem var(--border-color);
  /* iOS fix - because "inset" works not fine with border-radius */
  /* Safari fix - because "inset" works not fine with border-radius if the user zooms the page */
  border-color: transparent; }
  @supports (-webkit-touch-callout: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }
  @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-touch-callout: none)) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }

.dnb-step-indicator-v2 .dnb-step-indicator__item--visited .dnb-button {
  background-color: var(--color-pistachio); }

.dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button {
  cursor: text;
  pointer-events: initial;
  user-select: initial; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
    color: var(--color-black-80);
    background-color: var(--color-white);
    --border-color: var(--color-black-20);
    box-shadow: inset 0 0 0 0.0625rem var(--border-color);
    /* iOS fix - because "inset" works not fine with border-radius */
    /* Safari fix - because "inset" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }
    @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-touch-callout: none)) {
      .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive .dnb-button.dnb-button--secondary:active {
        box-shadow: 0 0 0 0.0625rem var(--border-color); } }

.dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
  --border-color: var(--color-black-80);
  box-shadow: inset 0 0 0 0.125rem var(--border-color);
  /* iOS fix - because "inset" works not fine with border-radius */
  /* Safari fix - because "inset" works not fine with border-radius if the user zooms the page */
  border-color: transparent; }
  @supports (-webkit-touch-callout: none) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }
  @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-touch-callout: none)) {
    .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:hover, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:focus, .dnb-step-indicator-v2 .dnb-step-indicator__item--inactive.dnb-step-indicator__item--current .dnb-button.dnb-button--secondary:active {
      box-shadow: 0 0 0 0.125rem var(--border-color); } }

html[data-whatinput='keyboard']
.dnb-step-indicator-v2 .dnb-step-indicator__item--current .dnb-button:not([disabled]):not(:active):not(:hover):focus {
  color: var(--color-emerald-green);
  background-color: var(--color-mint-green); }

.dnb-step-indicator-v2 .dnb-step-indicator__label, .dnb-step-indicator-v2 .dnb-step-indicator__label.dnb-p {
  font-size: var(--font-size-small);
  margin-bottom: 0.5rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status.dnb-button--secondary {
  background-color: var(--color-sand-yellow); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status--error.dnb-button--secondary {
  background-color: var(--color-fire-red-8); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status--info.dnb-button--secondary {
  background-color: var(--color-pistachio); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-button__icon {
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 0.75rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__number, .dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  font-weight: var(--font-weight-basis); }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  margin-top: 0.5rem;
  font-size: var(--font-size-x-small);
  line-height: var(--font-size-basis);
  color: var(--color-black-80); }
"
`;

exports[`StepIndicator scss have to match snapshot 1`] = `
"/*
* DNB StepIndicator
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
/*
* DNB Button
*
*/
/*
* DNB icon
*
*/
/*
* Icon component
*
*/
.dnb-icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1rem;
  line-height: 1rem;
  color: inherit;
  width: 1em;
  height: 1em; }
  .dnb-icon img,
  .dnb-icon svg {
    width: inherit;
    height: inherit;
    shape-rendering: geometricPrecision;
    vertical-align: top; }
  .dnb-icon svg[width='100%'] {
    width: inherit; }
  .dnb-icon svg[height='100%'] {
    height: inherit; }
  .dnb-icon--inherit-color svg:not([fill]),
  .dnb-icon--inherit-color svg [fill] {
    fill: currentColor; }
  .dnb-icon--inherit-color svg [stroke] {
    stroke: currentColor; }
  .dnb-icon--small {
    font-size: 0.75rem; }
  .dnb-icon--default {
    font-size: 1rem; }
  .dnb-icon--medium {
    font-size: 1.5rem; }
  .dnb-icon--large {
    font-size: 2rem; }
  .dnb-icon--x-large {
    font-size: 2.5rem; }
  .dnb-icon--xx-large {
    font-size: 3rem; }
  .dnb-icon--custom-size {
    width: auto;
    height: auto; }
  .dnb-icon--auto {
    font-size: 1em; }
  .dnb-icon--auto > .dnb-icon--wrapper {
    display: inline-flex;
    align-items: center;
    justify-content: center; }
  h1 .dnb-icon,
  h2 .dnb-icon,
  h3 .dnb-icon,
  h4 .dnb-icon,
  h5 .dnb-icon,
  h6 .dnb-icon {
    vertical-align: middle; }
  .dnb-icon.dnb-skeleton {
    color: var(--skeleton-color) !important; }
    .dnb-icon.dnb-skeleton::before, .dnb-icon.dnb-skeleton::after {
      content: none !important; }

/*
* DNB Tooltip
*
*/
.dnb-tooltip {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-tooltip *,
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Tooltip component
*
*/
.dnb-tooltip {
  position: absolute;
  z-index: 3100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  opacity: 0;
  visibility: hidden;
  transition: opacity 200ms var(--easing-default); }
  .dnb-tooltip--large {
    padding: 0.25rem 1rem; }
  .dnb-tooltip--animate_position {
    transition: all 200ms var(--easing-default), opacity 200ms var(--easing-default); }
  .dnb-tooltip--active {
    visibility: visible;
    /*
      because of the first "show" we also use animation
      also, use forwards because of the usage of visibility
    */
    animation: show-tooltip 200ms var(--easing-default) forwards; }
  html[data-visual-test] .dnb-tooltip--active, .dnb-tooltip--active.dnb-tooltip--no-animation {
    animation: show-tooltip 1ms var(--easing-default) forwards; }
  .dnb-tooltip--hide {
    visibility: visible;
    animation: hide-tooltip 200ms var(--easing-default) forwards; }
  .dnb-tooltip--hide.dnb-tooltip--no-animation {
    animation: hide-tooltip 1ms linear forwards; }
  .dnb-tooltip--fixed {
    position: fixed; }
  html[data-visual-test] .dnb-tooltip--hide {
    animation: hide-tooltip 1ms linear 1s forwards; }
  .dnb-tooltip__portal {
    position: absolute;
    top: 0;
    left: 0;
    right: 0; }
  .dnb-tooltip__content {
    min-width: 2rem;
    min-height: 1.5rem;
    padding: 0; }
  .dnb-tooltip__arrow {
    position: absolute;
    pointer-events: none;
    margin: 0;
    width: 1rem;
    height: 0.5rem;
    overflow: hidden; }
    .dnb-tooltip__arrow::before {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 1rem;
      height: 1rem;
      transform: translateY(70%) rotate(45deg); }
    .dnb-tooltip__arrow__position--bottom {
      top: -0.5rem; }
    .dnb-tooltip__arrow__position--top {
      bottom: -0.5rem;
      transform: rotate(180deg); }
    .dnb-tooltip__arrow__position--left {
      right: -0.75rem;
      margin-right: 3px;
      transform: rotate(90deg); }
    .dnb-tooltip__arrow__position--right {
      left: -0.75rem;
      margin-left: 3px;
      transform: rotate(270deg); }
    .dnb-tooltip__arrow__arrow--left {
      align-self: flex-start; }
    .dnb-tooltip__arrow__arrow--right {
      align-self: flex-end; }

@keyframes show-tooltip {
  from {
    opacity: 0; }
  to {
    opacity: 1; } }

@keyframes hide-tooltip {
  from {
    opacity: 1; }
  to {
    opacity: 0;
    visibility: hidden; } }

/*
* DNB FormStatus
*
*/
.dnb-form-status {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-form-status *,
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * FormStatus component
 *
 */
:root {
  --form-status-radius: 0.25rem; }

.dnb-form-status {
  display: flex;
  opacity: 1;
  transition: height 400ms var(--easing-default), opacity 400ms var(--easing-default), margin 400ms var(--easing-default), padding 400ms var(--easing-default); }
  .dnb-form-status--hidden {
    will-change: height, opacity, margin, padding;
    width: 0;
    height: 0;
    opacity: 0; }
  .dnb-form-status--is-animating {
    overflow: hidden;
    width: auto; }
  .dnb-form-status--disappear, .dnb-form-status--hidden {
    margin: 0 !important;
    padding: 0 !important; }
  .dnb-form-status__shell {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    min-width: inherit;
    border-radius: var(--form-status-radius); }
  .dnb-form-status__text {
    padding: 0.625rem 1rem;
    cursor: text;
    color: inherit;
    line-height: var(--line-height-small);
    font-size: var(--font-size-small);
    white-space: normal; }
    button .dnb-form-status__text {
      cursor: inherit; }
    .dnb-form-status__text .dnb-anchor {
      font-size: inherit; }
  .dnb-icon + .dnb-form-status__text {
    padding-left: 0.5rem; }
  .dnb-form-status__shell > .dnb-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0.3333333em 0.3333333em 0.3333333em 0.6666666em; }
  .dnb-form-status__size--large .dnb-form-status__text {
    padding-top: 1.125rem;
    padding-bottom: 1.125rem; }
  .dnb-form-status__size--large .dnb-form-status__shell > .dnb-icon {
    margin-top: 0.6666666em;
    margin-bottom: 0.6666666em; }
  .dnb-form-status--stretch {
    flex-grow: 1; }
  .dnb-form-status--stretch .dnb-form-status__shell {
    width: 100%; }
  .dnb-form-status--stretch .dnb-form-status__text {
    max-width: 47rem; }
  .dnb-form-status[hidden] {
    display: none; }
  .dnb-form-status--no-animation,
  html[data-visual-test] .dnb-form-status {
    transition-duration: 1ms !important; }

.dnb-button {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-button *,
  .dnb-button ::before,
  .dnb-button ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-button ::before,
  .dnb-button ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Button component
*
*/
:root {
  --button-font-size: var(--font-size-basis);
  --button-font-size-small: var(--font-size-small);
  --button-width: 2.5rem;
  --button-height: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-icon-size: 1rem;
  --button-border-width: 0.0625rem;
  --button-border-width--hover: 0.1875rem;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--small: calc(var(--button-height--small) / 2);
  --button-border-radius--medium: calc(var(--button-height--medium) / 2);
  --button-border-radius--large: calc(var(--button-height--large) / 2); }

.dnb-button {
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  cursor: pointer;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--button-width);
  height: auto;
  padding: 0;
  border: var(--button-border-width) solid transparent;
  border-radius: var(--button-border-radius);
  text-decoration: none;
  font-size: var(--font-size-small);
  /* stylelint-disable-next-line */ }
  .dnb-button--wrap {
    overflow-wrap: break-word;
    white-space: normal; }
  .dnb-button,
  .dnb-core-style .dnb-button {
    line-height: var(--button-height); }
  .dnb-button__text {
    margin: 0.5rem 0;
    font-size: var(--button-font-size);
    line-height: var(--line-height-basis);
    color: inherit;
    transform: translateY(-0.03125rem); }
    .dnb-button__text [data-os='linux'] {
      transform: translateY(-0.035rem); }
  .dnb-button__alignment {
    display: inline-block;
    width: 0; }
  .dnb-button__bounding {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    transform: scale(1.1, 1.4);
    background-color: transparent;
    border-radius: var(--button-border-radius); }
  .dnb-button--has-text {
    padding-left: 1.5rem;
    padding-right: 1.5rem; }
  .dnb-button--size-small {
    width: var(--button-width--small);
    font-size: var(--button-font-size-small);
    border-radius: var(--button-border-radius--small); }
    .dnb-button--size-small,
    .dnb-core-style .dnb-button--size-small {
      line-height: var(--button-height--small); }
  .dnb-button--size-small .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-small {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-small {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-small {
    padding-right: 0.5rem; }
  .dnb-button--size-medium {
    width: var(--button-width--medium);
    border-radius: var(--button-border-radius--medium); }
    .dnb-button--size-medium,
    .dnb-core-style .dnb-button--size-medium {
      line-height: var(--button-height--medium); }
  .dnb-button--size-medium .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-medium {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-medium {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-medium {
    padding-right: 0.5rem; }
  .dnb-button--size-large {
    width: var(--button-width--large);
    border-radius: var(--button-border-radius--large); }
    .dnb-button--size-large,
    .dnb-core-style .dnb-button--size-large {
      line-height: var(--button-height--large); }
  .dnb-button--has-text.dnb-button--size-large {
    padding-left: 2rem;
    padding-right: 2rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-large {
    padding-left: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-large {
    padding-right: 1rem; }
  .dnb-button--has-text {
    width: auto; }
  .dnb-button--has-text .dnb-button__icon {
    margin: 0 calc(var(--button-icon-size) / 2); }
  .dnb-button--has-text.dnb-button--icon-position-left {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right {
    padding-right: 0.5rem; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
    order: 2; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
    order: 1; }
  .dnb-button:not(.dnb-button--has-text) .dnb-button__icon {
    width: inherit; }
  .dnb-button__icon.dnb-icon svg:not([width]):not([height]) {
    width: var(--button-icon-size);
    height: var(--button-icon-size); }
  [href] > .dnb-button__icon.dnb-icon {
    line-height: var(--button-font-size); }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__icon {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left > *,
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top > *,
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__text {
    order: 2; }
  .dnb-button--stretch {
    width: 100%; }
  .dnb-button--reset {
    margin: 0;
    padding: 0;
    width: auto;
    height: auto;
    overflow: visible;
    border: none;
    border-radius: 0;
    background-color: transparent;
    appearance: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    text-align: inherit;
    line-height: inherit; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover:not([disabled]) {
      box-shadow: none;
      border: none; }
    .dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):focus,
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):active {
      box-shadow: none;
      color: inherit;
      border: none; }
  .dnb-button[type='button'], .dnb-button[type='reset'], .dnb-button[type='submit'] {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none; }
  .dnb-button[disabled] {
    cursor: not-allowed;
    outline: none; }
  .dnb-form-row--vertical .dnb-form-row__content > .dnb-button {
    align-self: flex-start; }
  .dnb-form-row--horizontal .dnb-form-row__content .dnb-button__text {
    white-space: nowrap; }
  .dnb-button + .dnb-form-status {
    margin-top: 0.5rem; }

/* Firefox includes a hidden border which messes up button dimensions */
button.dnb-button::-moz-focus-inner {
  border: none; }

.dnb-step-indicator {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-step-indicator *,
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-step-indicator ::before,
  .dnb-step-indicator ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * StepIndicator component
 *
 */
/*
 * Deprecated v1
 *
 */
.dnb-step-indicator-v1 .dnb-step-indicator {
  position: relative;
  z-index: 1;
  display: block;
  padding: 0; }
  .dnb-step-indicator-v1 .dnb-step-indicator__list {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    padding: 0;
    margin: 0;
    list-style: none; }
  .dnb-spacing .dnb-step-indicator-v1 .dnb-step-indicator__list,
  .dnb-spacing .dnb-step-indicator-v1 .dnb-step-indicator__list li {
    margin-top: 0;
    margin-bottom: 0; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item {
    align-self: flex-end; }
  .dnb-step-indicator-v1 .dnb-step-indicator__item-content {
    font-size: var(--font-size-basis); }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-contenta, .dnb-step-indicator-v1 .dnb-step-indicator__item-content.dnb-anchor, .dnb-step-indicator-v1 .dnb-step-indicator__item-content--static, .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link {
      position: relative;
      z-index: 2;
      display: inline-flex;
      align-items: flex-end;
      margin: 0;
      padding: 0.25rem 0.25rem;
      height: 100%;
      border-bottom: none;
      text-decoration: none;
      box-shadow: none; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link.dnb-anchor {
      line-height: var(--line-height-basis); }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus[disabled] {
      cursor: not-allowed; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled]) {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
      .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled])::after,
      html:not([data-whatintent='touch']) .dnb-step-indicator-v1 .dnb-step-indicator__item-content--link:focus:not([disabled])::after {
        content: none; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--number {
      padding-right: 0.25rem;
      white-space: nowrap; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content--text {
      text-align: left; }
    .dnb-step-indicator-v1 .dnb-step-indicator__item-content::after {
      content: '';
      position: absolute;
      z-index: 1;
      left: 0;
      bottom: 0;
      width: 100%;
      height: 3px;
      border-radius: 1.5px; }
  .dnb-step-indicator-v1 .dnb-step-indicator::after {
    content: '';
    position: absolute;
    z-index: -1;
    left: -100vw;
    bottom: 0;
    width: 100vw;
    height: 1px;
    color: var(--color-black);
    background-color: currentColor;
    box-shadow: 100vw 0 0 0 currentColor; }

@media screen and (min-width: 50.1em) {
  .dnb-step-indicator__sidebar {
    max-width: 20rem;
    margin-right: var(--spacing-x-large); }
    .dnb-step-indicator__sidebar .dnb-step-indicator__item {
      min-width: 320px; } }

@media screen and (max-width: 50.1em) {
  .dnb-step-indicator__sidebar--ssr-skeleton {
    visibility: hidden;
    overflow: hidden;
    width: 0;
    height: 5.5rem; } }

.dnb-step-indicator-v2 .dnb-step-indicator__list {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  list-style: none; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger {
  display: flex;
  flex-direction: column; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger__button,
.dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button {
  overflow: hidden;
  justify-content: space-between;
  border-radius: 0.25rem;
  will-change: height;
  transition: height 400ms var(--easing-default); }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button .dnb-button__text,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button .dnb-button__text {
    text-align: left; }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button.dnb-button--has-icon .dnb-button__text,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button.dnb-button--has-icon .dnb-button__text {
    margin-right: 1rem; }
  .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button .dnb-button__alignment,
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button .dnb-button__alignment {
    order: 2; }
  html[data-visual-test] .dnb-step-indicator-v2 .dnb-step-indicator__trigger__button, html[data-visual-test]
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button {
    transition-duration: 1ms !important; }

.dnb-step-indicator-v2 .dnb-step-indicator__trigger button.dnb-step-indicator-v2 .dnb-step-indicator__trigger__button {
  margin-top: 0.5rem; }

.dnb-step-indicator-v2 .dnb-step-indicator__item {
  margin-bottom: 1rem; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button__icon {
    opacity: 1;
    transition: opacity 1400ms ease-in-out; }
    html[data-visual-test] .dnb-step-indicator-v2 .dnb-step-indicator__item .dnb-button__icon {
      transition-duration: 1ms !important; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item:not(.dnb-step-indicator__item--visited) .dnb-button:not(.dnb-step-indicator__button__status)
.dnb-button__icon {
    opacity: 0; }

.dnb-step-indicator-v2 .dnb-step-indicator__item-content {
  display: flex;
  flex-wrap: nowrap;
  padding: 0.5rem 0; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item-content__number {
    padding-right: 0.5rem;
    white-space: nowrap; }
  .dnb-step-indicator-v2 .dnb-step-indicator__item-content__wrapper {
    display: flex;
    flex-direction: column; }

.dnb-step-indicator-v2 .dnb-step-indicator__button__status .dnb-step-indicator__item-content__status {
  color: var(--color-black-80);
  font-size: var(--font-size-x-small); }
"
`;
